[gd_scene load_steps=4 format=3 uid="uid://1xiodsxawxit"]

[ext_resource type="Script" path="res://Levels/MainMenu.gd" id="1_jnrbb"]
[ext_resource type="Texture2D" uid="uid://dtqq0bniliord" path="res://UserInterface/menu_buttons.png" id="2_7wto8"]
[ext_resource type="Texture2D" uid="uid://t30mmrlgqm3l" path="res://UserInterface/menu_bg.png" id="2_uk73f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jnrbb")
metadata/_edit_vertical_guides_ = [960.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -310.0
offset_right = 1440.0
offset_bottom = 770.0
scale = Vector2(1.33624, 1.33624)
texture = ExtResource("2_uk73f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 445.0
offset_right = 889.0
offset_bottom = 511.0
scale = Vector2(4.2, 3.08)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlaySprite" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(27.0476, 61.8698)
scale = Vector2(0.12, 0.15)
texture = ExtResource("2_7wto8")
hframes = 2
vframes = 4

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/PlaySprite"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -507.238
offset_top = -116.312
offset_right = -499.238
offset_bottom = -108.312
scale = Vector2(127.342, 29.4983)
flat = true
metadata/_edit_use_anchors_ = true

[node name="CreditsSprite" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(27.0476, 101.896)
scale = Vector2(0.12, 0.15)
texture = ExtResource("2_7wto8")
hframes = 2
vframes = 4
frame = 6

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/CreditsSprite"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -508.571
offset_top = -124.675
offset_right = -500.571
offset_bottom = -116.675
scale = Vector2(127.166, 31.5547)
flat = true
metadata/_edit_use_anchors_ = true

[node name="ExitSprite" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(27.0476, 141.922)
scale = Vector2(0.12, 0.15)
texture = ExtResource("2_7wto8")
hframes = 2
vframes = 4
frame = 2

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/ExitSprite"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -507.143
offset_top = -121.753
offset_right = -466.143
offset_bottom = -90.7533
scale = Vector2(24.7704, 7.98294)
flat = true

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/PlaySprite/Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/PlaySprite/Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlaySprite/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/CreditsSprite/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/CreditsSprite/Credits" to="." method="_on_credits_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ExitSprite/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/ExitSprite/Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitSprite/Exit" to="." method="_on_exit_pressed"]
